--- a/html/a1.html
+++ b/html/a1.html
@@ -1,96 +1,46 @@
-<style>
-    section
-    {
-        background-color: rgba(0,0,0,.7);
-    }
-
-    #infografia
-    {
-        position: relative;
-        width: 900px;
-        height: 600px;
-        margin: 0 auto;
-        overflow: hidden;
-    }
-    .pag
-    {
-        width: 100%;
-        height:100%;
-        background: #fff;
-    }
-
-    .cerrar
-    {
-        position: fixed;
-        color: #fff;
-        font-size: 28pt;
-        width: 43px;
-        height: 43px;
-        line-height: 40px;
-        text-align: center;
-        right: 76px;
-        top: -40px;
-        cursor: pointer;
-        -webkit-transition: all .5s;
-        -moz-transition: all .5s;
-        -ms-transition: all .5s;
-        -o-transition: all .5s;
-        transition: all .5s;
-    }
-    .cerrar:hover
-    {
-        color:#ff0000;
-    }
-
-    .nav-infografia
-    {
-        font-size: 25pt;
-        float: right;
-        margin:0 10px;
-        cursor: pointer;
-        transition: all .5s;
-    }
-    .nav-infografia:hover{
-        color: #4BAA18;
-    }
-</style>
-
 <div class="animated zoomIn" style="height: 600px;">
-    <a href="#/home/a" class="cerrar">X</a>
     <div id="infografia">
-        <div id="pag1" class="pag">
 
-            <img class="animated" ng-class="{fadeInDown :a1Ctrl.estado1}" src="img/infografia1/e1.png" style="position: absolute;width: 400px;top:30px;left: 160px; animation-delay: .5s;">
+        <div id="pag1" class="pag">
+            <a href="#/home/a" class="cerrar">X</a>
+            <img ng-if="a1Ctrl.estado1" ng-src="img/infografia1/1a.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{fadeInDown :a1Ctrl.estado1}" src="img/infografia1/e1.png" style="position: absolute;width: 400px;top:30px;left: 160px; animation-delay: .5s;">
             <img class="animated" ng-class="{fadeInLeft :a1Ctrl.estado1}" src="img/infografia1/e2.png" style="position: absolute;width: 130px;top: 65px;left: 75px; animation-delay: 2s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e3.png" style="position: absolute; top: 310px; left: 230px;width: 55px;animation-delay: 11s; ">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e4.png" style="position: absolute;width: 340px;top: 100px;left: 337px; animation-delay: 4s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e5.png" style="position: absolute;right: 0; width: 200px; top: 280px; animation-delay: .5s;">
             <img class="animated" ng-class="{fadeInUp :a1Ctrl.estado1}" src="img/infografia1/e6.png" style="position: absolute; top: 477px; left: 1%; width: 98%; animation-delay: .5s;">
-            <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e7.png" style="position: absolute; top: 490px; left: 190px; width: 500px; animation-delay: 12s;}">
+            <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e7.png" style="position: absolute; top: 490px; left: 190px; width: 500px; animation-delay: 12s;}">-->
 
-            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="a1Ctrl.saltaSlide([0,600,2])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia animated pulse infinite" ng-click="a1Ctrl.saltaSlide([0,600,2])"></span>
         </div>
         <div id="pag2" class="pag">
-            <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e8.png" style="position: absolute;width: 140px;top:630px;left: 210px; animation-delay: 1s;">
+            <img ng-if="a1Ctrl.estado2" ng-src="img/infografia1/1b.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e8.png" style="position: absolute;width: 140px;top:630px;left: 210px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e9.png" style="position: absolute;width: 140px;top: 630px;left: 410px; animation-delay: 2s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e10.png" style="position: absolute; top: 600px; left: 602px;width: 200px;animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft :a1Ctrl.estado2}" src="img/infografia1/e11.png" style="position:absolute; top:676px; left: 40px; width: 250px; animation-delay: 5s;">
             <img class="animated" ng-class="{fadeInRight :a1Ctrl.estado2}" src="img/infografia1/e12.gif" style="position: absolute; top: 894px; left: 379px; width: 461px; animation-delay: 5s;">
-            <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e13.png" style="position: absolute; top: 935px; left: 50px; width: 268px; animation-delay: 7s;">
-            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="a1Ctrl.saltaSlide([600,0,1])"></span>
-            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="a1Ctrl.saltaSlide([600,1200,3])"></span>
+            <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e13.png" style="position: absolute; top: 935px; left: 50px; width: 268px; animation-delay: 7s;">-->
+            <span class="glyphicon glyphicon-menu-up nav-infografia animated pulse infinite" ng-click="a1Ctrl.saltaSlide([600,0,1])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia animated pulse infinite" ng-click="a1Ctrl.saltaSlide([600,1200,3])"></span>
 
         </div>
         <div id="pag3" class="pag">
-            <img class="animated" ng-class="{fadeInUp :a1Ctrl.estado3}" src="img/infografia1/e20.png" style="position: absolute; top: 1608px; left: 34px; width: 830px; animation-delay: 1s; z-index: 0;">
+            <img ng-if="a1Ctrl.estado3" ng-src="img/infografia1/1c.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{fadeInUp :a1Ctrl.estado3}" src="img/infografia1/e20.png" style="position: absolute; top: 1608px; left: 34px; width: 830px; animation-delay: 1s; z-index: 0;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e14.png" style="position: absolute; top: 1130px; left: 20px; width: 683px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e15.png" style="position: absolute; top: 1345px; left: 20px; width: 683px; animation-delay: 3s;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e16.png" style="position: absolute; top: 1560px; left: 50px; width: 120px; animation-delay: 4s;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e17.png" style="position: absolute; top: 1560px; left: 276px; width: 120px; animation-delay: 5s;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e18.png" style="position: absolute; top: 1560px; left: 502px; width: 120px; animation-delay: 6s;">
-            <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e19.png" style="position: absolute; top: 1550px; left: 702px; width: 120px; animation-delay: 7s;">
-
-            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="a1Ctrl.saltaSlide([1200,600,2])"></span>
+            <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e19.png" style="position: absolute; top: 1550px; left: 702px; width: 120px; animation-delay: 7s;">-->
+            <span class="glyphicon glyphicon-menu-up nav-infografia animated pulse infinite" ng-click="a1Ctrl.saltaSlide([1200,600,2])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia animated pulse infinite" ng-click="a1Ctrl.saltaSlide([1200,1800,4])"></span>
+        </div>
+        <div id="pag4" class="pag">
+            <img ng-if="a1Ctrl.estado4" ng-src="img/infografia1/1d.gif" width="100%" alt="">
+            <span class="glyphicon glyphicon-menu-up nav-infografia animated pulse infinite" ng-click="a1Ctrl.saltaSlide([1800,1200,3])"></span>
         </div>
     </div>
 </div>
