--- a/html/b1.html
+++ b/html/b1.html
@@ -1,96 +1,63 @@
-<style>
-    section
-    {
-        background-color: rgba(0,0,0,.7);
-    }
-
-    #infografia
-    {
-        position: relative;
-        width: 900px;
-        height: 600px;
-        margin: 0 auto;
-        overflow: hidden;
-    }
-    .pag
-    {
-        width: 100%;
-        height:100%;
-        background: #fff;
-    }
-
-    .cerrar
-    {
-        position: fixed;
-        color: #fff;
-        font-size: 28pt;
-        width: 43px;
-        height: 43px;
-        line-height: 40px;
-        text-align: center;
-        right: 76px;
-        top: -40px;
-        cursor: pointer;
-        -webkit-transition: all .5s;
-        -moz-transition: all .5s;
-        -ms-transition: all .5s;
-        -o-transition: all .5s;
-        transition: all .5s;
-    }
-    .cerrar:hover
-    {
-        color:#ff0000;
-    }
-
-    .nav-infografia
-    {
-        font-size: 25pt;
-        float: right;
-        margin:0 10px;
-        cursor: pointer;
-        transition: all .5s;
-    }
-    .nav-infografia:hover{
-        color: #4BAA18;
-    }
-</style>
 
 <div class="animated zoomIn" style="height: 600px;">
-    <a href="#/home/b" class="cerrar">X</a>
     <div id="infografia">
+        <a href="#/home/b" class="cerrar">X</a>
         <div id="pag1" class="pag">
-
-            <img class="animated" ng-class="{fadeInDown :b1Ctrl.estado1}" src="img/infografia2/e1.png" style="position: absolute;width: 220px;top:30px;left: 60px; animation-delay: .5s;">
+            <img ng-if="b1Ctrl.estado1" src="img/infografia2/2a.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{fadeInDown :b1Ctrl.estado1}" src="img/infografia2/e1.png" style="position: absolute;width: 220px;top:30px;left: 60px; animation-delay: .5s;">
             <img class="animated" ng-class="{zoomIn :b1Ctrl.estado1}" src="img/infografia2/e2.png" style="position: absolute;width: 500px;top: 40px;left: 310px;">
             <img class="animated" ng-class="{zoomIn :b1Ctrl.estado1}" src="img/infografia2/e3.png" style="position: absolute; width: 460px; top: 74px; left: 310px;animation-delay: 1s; ">
             <img class="animated" ng-class="{zoomIn :b1Ctrl.estado1}" src="img/infografia2/e4.png" style="position: absolute;width: 300px;top: 285px;left: 360px; animation-delay: 2s;">
-            <img class="animated" ng-class="{zoomIn :b1Ctrl.estado1}" src="img/infografia2/e5.png" style="position: absolute;left: 70px; width: 720px; top: 415px; animation-delay: 4s;">
+            <img class="animated" ng-class="{zoomIn :b1Ctrl.estado1}" src="img/infografia2/e5.png" style="position: absolute;left: 70px; width: 720px; top: 415px; animation-delay: 4s;">-->
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([0,600,2])"></span>
         </div>
         <div id="pag2" class="pag">
-            <img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado2}" src="img/infografia2/e6.gif" style="position: absolute; top: 640px; left: 40px; width: 315px; z-index: 1; animation-delay: .5s;">
-            <img class="animated" ng-class="{fadeInRight :b1Ctrl.estado2}" src="img/infografia2/e7.png" style="position: absolute; top: 730px; left: 285px; width: 515px; animation-delay: 1s;}">
+            <img ng-if="b1Ctrl.estado2" src="img/infografia2/2b.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado2}" src="img/infografia2/e6.gif" style="position: absolute; top: 640px; left: 40px; width: 315px; z-index: 1; animation-delay: .5s;">
+            <img class="animated" ng-class="{fadeInRight :b1Ctrl.estado2}" src="img/infografia2/e7.png" style="position: absolute; top: 730px; left: 285px; width: 515px; animation-delay: 1s;}">-->
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([600,0,1])"></span>
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([600,1200,3])"></span>
 
         </div>
         <div id="pag3" class="pag">
-           <img class="animated" ng-class="{zoomIn :b1Ctrl.estado3}" src="img/infografia2/e8.png" style="position: absolute;width: 660px;top:1100px;left: 100px; animation-delay: 1s;">
+           <img ng-if="b1Ctrl.estado3" src="img/infografia2/2c.gif" width="100%" alt="">
+           <!--<img class="animated" ng-class="{zoomIn :b1Ctrl.estado3}" src="img/infografia2/e8.png" style="position: absolute;width: 660px;top:1100px;left: 100px; animation-delay: 1s;">
            <img class="animated" ng-class="{zoomIn :b1Ctrl.estado3}" src="img/infografia2/e9.png" style="position: absolute;width: 165px;top: 1380px;left: 25px; animation-delay: 2s;">
            <img class="animated" ng-class="{zoomIn :b1Ctrl.estado3}" src="img/infografia2/e10.png" style="position: absolute;width: 165px;top: 1380px;left: 355px; animation-delay: 3s;">
            <img class="animated" ng-class="{zoomIn :b1Ctrl.estado3}" src="img/infografia2/e11.png" style="position: absolute;width: 165px;top: 1380px;left: 675px; animation-delay: 4s;">
-           <img class="animated" ng-class="{fadeInUp :b1Ctrl.estado3}" src="img/infografia2/e12.png" style="position: absolute;width: 600px;top: 1600px;left: 150px; animation-delay: 1s;">
+           <img class="animated" ng-class="{fadeInUp :b1Ctrl.estado3}" src="img/infografia2/e12.png" style="position: absolute;width: 600px;top: 1600px;left: 150px; animation-delay: 1s;">-->
 
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([1200,600,2])"></span>
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([1200,1800,4])"></span>
         </div>
         <div id="pag4" class="pag">
-            <img class="animated" ng-class="{fadeInDown :b1Ctrl.estado4}" src="img/infografia2/e13.png" style="position: absolute;width: 600px;top: 1780px;left: 150px; animation-delay: 1s;">
+            <img ng-if="b1Ctrl.estado4" src="img/infografia2/2d.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{fadeInDown :b1Ctrl.estado4}" src="img/infografia2/e13.png" style="position: absolute;width: 600px;top: 1780px;left: 150px; animation-delay: 1s;">
             <img class="animated" ng-class="{fadeInRight :b1Ctrl.estado4}" src="img/infografia2/e14.png" style="position: absolute;width: 602px;top: 1880px;left: 150px; animation-delay: 2s;">
             <img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado4}" src="img/infografia2/e15.png" style="position: absolute;width: 600px;top: 1997px;left: 150px; animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInRight :b1Ctrl.estado4}" src="img/infografia2/e16.png" style="position: absolute;width: 603px;top: 2101px;left: 149px; animation-delay: 4s;">
-            <img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado4}" src="img/infografia2/e17.png" style="position: absolute;width: 602px;top: 2233px;left: 148px; animation-delay: 5s;">
+            <img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado4}" src="img/infografia2/e17.png" style="position: absolute;width: 602px;top: 2233px;left: 148px; animation-delay: 5s;">-->
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([1800,1200,3])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([1800,2400,5])"></span>
+        </div>
+        <div id="pag5" class="pag">
+            <img ng-if="b1Ctrl.estado5" src="img/infografia2/2e.gif" width="100%" alt="">
+            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([2400,1800,4])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([2400,3000,6])"></span>
+        </div>
+        <div id="pag6" class="pag">
+            <img ng-if="b1Ctrl.estado6" src="img/infografia2/2f.gif" width="100%" alt="">
+            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([3000,2400,5])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([3000,3600,7])"></span>
+        </div>
+        <div id="pag7" class="pag">
+            <img ng-if="b1Ctrl.estado7" src="img/infografia2/2g.gif" width="100%" alt="">
+            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([3600,3000,6])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([3600,4200,8])"></span>
+        </div>
+        <div id="pag8" class="pag">
+            <img ng-if="b1Ctrl.estado8" src="img/infografia2/2h.gif" width="100%" alt="">
+            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([4200,3600,7])"></span>
         </div>
     </div>
 </div>
