--- a/html/c1.html
+++ b/html/c1.html
@@ -1,66 +1,10 @@
-<style>
-    section
-    {
-        background-color: rgba(0,0,0,.7);
-    }
-
-    #infografia
-    {
-        position: relative;
-        width: 900px;
-        height: 600px;
-        margin: 0 auto;
-        overflow: hidden;
-    }
-    .pag
-    {
-        width: 100%;
-        height:100%;
-        background: #fff;
-    }
-
-    .cerrar
-    {
-        position: fixed;
-        color: #fff;
-        font-size: 28pt;
-        width: 43px;
-        height: 43px;
-        line-height: 40px;
-        text-align: center;
-        right: 76px;
-        top: -40px;
-        cursor: pointer;
-        -webkit-transition: all .5s;
-        -moz-transition: all .5s;
-        -ms-transition: all .5s;
-        -o-transition: all .5s;
-        transition: all .5s;
-    }
-    .cerrar:hover
-    {
-        color:#ff0000;
-    }
-
-    .nav-infografia
-    {
-        font-size: 25pt;
-        float: right;
-        margin:0 10px;
-        cursor: pointer;
-        transition: all .5s;
-    }
-    .nav-infografia:hover{
-        color: #4BAA18;
-    }
-</style>
 
 <div class="animated zoomIn" style="height: 600px;">
-    <a href="#/home/c" class="cerrar">X</a>
     <div id="infografia">
+        <a href="#/home/c" class="cerrar">X</a>
         <div id="pag1" class="pag">
-
-            <img class="animated" ng-class="{flipInX :c1Ctrl.estado1}" src="img/infografia3/e1.png" style="position: absolute;width: 230px;top:10px;left: 325px; animation-delay: 1s;">
+            <img ng-if="c1Ctrl.estado1" src="img/infografia3/3a.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{flipInX :c1Ctrl.estado1}" src="img/infografia3/e1.png" style="position: absolute;width: 230px;top:10px;left: 325px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e2.png" style="position: absolute;width: 370px;top: 25px;left: 280px; animation-delay: 1.5s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e3.png" style="position: absolute; width: 580px; top: 103px; left: 170px; animation-delay: 2s;">
             <img class="animated" ng-class="{fadeInLeft :c1Ctrl.estado1}" src="img/infografia3/e4.png" style="position: absolute;width: 390px;top: 280px;left: 270px; animation-delay: 2.5s;">
@@ -71,26 +15,33 @@
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e9.png" style="position: absolute;width: 80px; top: 452px; left: 490px; animation-delay: 3.5s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e10.png" style="position: absolute;width: 150px; top: 350px; left: 595px; animation-delay: 3.5s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e11.png" style="position: absolute;width: 60px; top: 430px; left: 670px; animation-delay: 3.5s;">
-            <img class="animated" ng-class="{fadeInLeft :c1Ctrl.estado1}" src="img/infografia3/e12.png" style="position: absolute;width: 200px; top: 540px; left: 270px; animation-delay: 4s;">
+            <img class="animated" ng-class="{fadeInLeft :c1Ctrl.estado1}" src="img/infografia3/e12.png" style="position: absolute;width: 200px; top: 540px; left: 270px; animation-delay: 4s;">-->
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="c1Ctrl.saltaSlide([0,600,2])"></span>
         </div>
         <div id="pag2" class="pag">
-            <img class="animated" ng-class="{flipInX :c1Ctrl.estado2}" src="img/infografia3/e13.png" style="position: absolute; width: 580px; top: 610px; left: 170px; animation-delay: 1s;">
+            <img ng-if="c1Ctrl.estado2" src="img/infografia3/3b.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{flipInX :c1Ctrl.estado2}" src="img/infografia3/e13.png" style="position: absolute; width: 580px; top: 610px; left: 170px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e14.png" style="position: absolute; width: 300px; top: 810px; left: 200px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e15.png" style="position: absolute; width: 337px; top: 858px; left: 200px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e16.png" style="position: absolute; width: 260px; top: 920px; left: 200px; animation-delay: 1s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e17.png" style="position: absolute; width: 250px; top: 920px; left: 500px; animation-delay: 1s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e17.png" style="position: absolute; width: 250px; top: 920px; left: 500px; animation-delay: 1s;">-->
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="c1Ctrl.saltaSlide([600,0,1])"></span>
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="c1Ctrl.saltaSlide([600,1200,3])"></span>
 
         </div>
         <div id="pag3" class="pag">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado3}" src="img/infografia3/e18.png" style="position: absolute; width: 580px; top: 1220px; left: 170px; animation-delay: 1s;">
+            <img ng-if="c1Ctrl.estado3" src="img/infografia3/3c.gif" width="100%" alt="">
+            <!--<img class="animated" ng-class="{zoomIn :c1Ctrl.estado3}" src="img/infografia3/e18.png" style="position: absolute; width: 580px; top: 1220px; left: 170px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado3}" src="img/infografia3/e19.png" style="position: absolute; width: 418px; top: 1440px; left: 200px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado3}" src="img/infografia3/e20.png" style="position: absolute; width: 435px; top: 1520px; left: 200px; animation-delay: 1s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado3}" src="img/infografia3/e21.png" style="position: absolute; width: 210px; top: 1585px; left: 200px; animation-delay: 1s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado3}" src="img/infografia3/e21.png" style="position: absolute; width: 210px; top: 1585px; left: 200px; animation-delay: 1s;">-->
 
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="c1Ctrl.saltaSlide([1200,600,2])"></span>
+            <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="c1Ctrl.saltaSlide([1200,1800,4])"></span>
+        </div>
+        <div id="pag4" class="pag">
+            <img ng-if="c1Ctrl.estado4" src="img/infografia3/3d.gif" width="100%" alt="">
+            <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="c1Ctrl.saltaSlide([1800,1200,3])"></span>
         </div>
     </div>
 </div>
