--- a/html/presentation.html
+++ b/html/presentation.html
@@ -1,18 +1,3 @@
-<style>
-    .slash
-    {
-        background: #fff;
-        width: 10px;
-        height: 242px;
-        transform: rotate(10deg);
-        margin: 0 auto;
-    }
-    .oculta
-    {
-        display: none;
-    }
-</style>
-
 <div id="intro1" class="row animated zoomIn" style="height: 600px;">
     <div class="col-md-12">
         <div >
@@ -29,13 +14,13 @@
         <img src="img/logo.png" style="width: 100%;position: relative;top: 45px;">
     </div>
     <div class="col-md-1">
-        <div class="slash"></div>
+        <img src="img/barra1.png" alt="">
     </div>
     <div class="col-md-8">
         <div class="row">
             <div class="col-md-12"> <h1 style="color:#fff;font-size: 100px !important;">FRASE <br> MOTIVADORA</h1> </div>
         </div>
     </div>
-    <button class="btn btn-success btn-large" style="position: absolute;bottom: 40px;right: 20px;"  ng-click="pCtrl.go('/home')">INICIO</button>
+    <a class="btn btn-success btn-large" style="position: absolute;bottom: 40px;right: 20px;"  href="#/home">INICIO</a>
 </div>
 
